...
    const val DATA_PICKER_TAG = "dataPickerTag"
    const val DELETE_FILE = "deleteFile"
    const val DELETE_TILE = "deleteTile"
    const val DETAILS_TILE = "detailsTile"
    const val FILE_ITEM = "fileItem"
    const val FLIGHT_TILE_TAG = "flightTileTag"
    const val FLOATING_ACTION_BUTTON_TAG = "floatingActionButtonTag"
    const val LOTTIE_ANIMATION_TAG = "lottieAnimationTag"
    const val MENU_TAG = "menuTag"
    const val NOTES_TILE_TAG = "notesTileTag"
    const val NOTES_TILE_DELETE_TAG = "notesTileDeleteTag"
    const val SEARCH_BAR_TAG = "searchBarTag"
    const val SEARCH_TEXT_FIELD_TAG = "searchTextFieldTag"
}
